--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -59,7 +59,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://www.gobiglaw.com/jobs/21468054-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP in Orange County, California | GoBiglaw.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.gobiglaw.com/jobs/21468054-privacy-and-data-security-associate-at-manatt-phelps-phillips-llp?utm_source=dlvr.it&utm_medium=twitter'>Privacy and Data Security Associate Job at Manatt, Phelps &amp; Phillips, LLP in Orange County, California | GoBiglaw.com</a></h5> 
 <p><span class="badge badge-light">California Albany, NY  Atlanta, GA  Austin, TX  Baltimore, MD  Bellevue, WA</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -72,7 +72,7 @@
 <p>2 days ago ... Information Privacy Analyst. Boulder, CO. Administration. Full-time. Submit your 
 application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697312169-information-privacy-analyst'>Goldstone Partners, Inc. Information Privacy Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697312169-information-privacy-analyst'>Goldstone Partners, Inc. Information Privacy Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -142,7 +142,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4425562002'>Job Application for Data Privacy Analyst at Toyota Connected</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4425562002'>Job Application for Data Privacy Analyst at Toyota Connected</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -150,7 +150,7 @@ experience?...</p>
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-09-22</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/oeb-data-privacy-paralegal-associate-new-jersey-location-4567'>OEB - Data Privacy Paralegal Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/oeb-data-privacy-paralegal-associate-new-jersey-location-4567'>OEB - Data Privacy Paralegal Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Newark, NJ</span></p>
 <p>Posted on: 2019-09-22</p>
 <hr/>
@@ -240,7 +240,7 @@ Privacy Office based in Cork, Ireland. You would work directly with the European
 responsible for facilitating the development and implementation of a data privacy 
 and?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/babylonhealth/12d360d3-5aaf-40ff-9732-0941db35384a'>Babylon Health - Compliance and Privacy Specialist (part-time)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/babylonhealth/12d360d3-5aaf-40ff-9732-0941db35384a'>Babylon Health - Compliance and Privacy Specialist (part-time)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
@@ -379,11 +379,11 @@ Prime's privacy program, working closely with privacy team members as well as?..
 <p>Apr 28, 2019 ... Blockchain Cryptographic Research Scientist (London/Paris). Global Services. 
 Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ajmn/job/oulM9fwu'>Al Jazeera Media Network Careers - Senior Privacy Compliance Specialist - Technical</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ajmn/job/oulM9fwu'>Al Jazeera Media Network Careers - Senior Privacy Compliance Specialist - Technical</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-08</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/uipath/ef99409c-ebba-44e1-97c5-884f743212ee'>UiPath - Privacy Data Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/ef99409c-ebba-44e1-97c5-884f743212ee'>UiPath - Privacy Data Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-07</p>
 <hr/>
@@ -429,11 +429,11 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
-<h5><a href='https://mixpanel.com/legal/privacy-policy/'>Privacy Policy | Mobile &amp; Web User Analytics | Mixpanel</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mixpanel.com/legal/privacy-policy/'>Privacy Policy | Mobile &amp; Web User Analytics | Mixpanel</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
